--- a/about.html
+++ b/about.html
@@ -99,8 +99,8 @@
             </div>
             <div class="box-container">
                 <div class="box">
-                    <img src="images/11zon_cropped (1).png">
-                    <h3>travel</h3>
+                    <img src="images/pubg.png">
+                    <h3>pubg</h3>
                 </div>
                         </div>
         </div>
